--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png" />
+  <link rel="icon" type="image/png" href="src/assets/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Enamino</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>L'Eco-Village d'Enamino | Séjour éco-touristique au Gabon</title>
+  <meta name="title" content="L'Eco-Village d'Enamino | Séjour éco-touristique au Gabon" />
+  <meta name="description" content="Découvrez l'Eco-Village d'Enamino, un camp éco-touristique de charme situé dans le Parc National de Loango au Gabon. Safari, biodiversité exceptionnelle et immersion en pleine nature." />
+  <meta name="keywords" content="Enamino, éco-village, Gabon, Parc National de Loango, safari, écotourisme, hébergement, bungalows, Afrique, faune sauvage, éléphants, gorilles" />
+  <meta name="author" content="L'Eco-Village d'Enamino" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://enamino.fr" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://enamino.fr" />
+  <meta property="og:title" content="L'Eco-Village d'Enamino | Séjour éco-touristique au Gabon" />
+  <meta property="og:description" content="Découvrez l'Eco-Village d'Enamino, un camp éco-touristique de charme situé dans le Parc National de Loango au Gabon." />
+  <meta property="og:image" content="https://enamino.fr/src/assets/images/logo-complete.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://enamino.fr" />
+  <meta property="twitter:title" content="L'Eco-Village d'Enamino | Séjour éco-touristique au Gabon" />
+  <meta property="twitter:description" content="Découvrez l'Eco-Village d'Enamino, un camp éco-touristique de charme situé dans le Parc National de Loango au Gabon." />
+  <meta property="twitter:image" content="https://enamino.fr/src/assets/images/logo-complete.png" />
+  
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#352a24" />
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Enamino" />
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
