--- a/index.html
+++ b/index.html
@@ -54,8 +54,43 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- Loading screen - shows while React loads -->
+    <div id="loading" style="
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, #352a24 0%, #1a1410 100%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    ">
+      <div style="
+        width: 80px;
+        height: 80px;
+        border: 4px solid rgba(173, 193, 120, 0.3);
+        border-radius: 50%;
+        border-top-color: #adc178;
+        animation: spin 1s ease-in-out infinite;
+      "></div>
+      <p style="
+        margin-top: 20px;
+        color: #f0ead2;
+        font-family: 'Raleway', sans-serif;
+        font-size: 16px;
+      ">Loading Enamino...</p>
+    </div>
+  </div>
   <script type="module" src="/src/main.jsx"></script>
+  <style>
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </body>
 
 </html>
