--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
     </div>
   </div>
   <script type="module" src="/src/main.jsx"></script>
+  <script>
+    // Unregister old service workers and register new one
+    if ('serviceWorker' in navigator) {
+      // First, unregister any existing service workers
+      navigator.serviceWorker.getRegistrations().then(function(registrations) {
+        for(let registration of registrations) {
+          registration.unregister();
+        }
+        // Then register the new service worker
+        navigator.serviceWorker.register('/sw.js')
+          .then((registration) => {
+            console.log('SW registered:', registration);
+          })
+          .catch((error) => {
+            console.log('SW registration failed:', error);
+          });
+      });
+    }
+  </script>
   <style>
     @keyframes spin {
       to { transform: rotate(360deg); }
